<resources>
    <string name="app_name">Mi tiendita</string>
    <string name="lista_de_deudas">Lista de deudas</string>
    <string name="todo">TODO</string>
    <string name="login">Iniciar Sesión</string>
    <string name="sing_up">Regístrate</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="monto_de_la_deuda">Monto de la deuda</string>
    <string name="observaciones">Indique las observaciones</string>
    <string name="add">Añadir</string>
    <string name="salir">Salir</string>
    <string name="apellidos">Ingresa los apellidos</string>
    <string name="id_cliente">Id Cliente:</string>
    <string name="nombre_t">Nombre:</string>
    <string name="apellidos_t">Apellidos:</string>
    <string name="saldo_de_la_deuda">Saldo de la deuda:</string>
    <string name="cliente">Cliente:</string>
    <string name="fecha_de_la_ultima_compra">Fecha de la ultima compra:</string>
    <string name="observaciones_t">Observaciones:</string>
    <string name="cerrar">Cerrar</string>

    <string name="saldo_a_sumar_o_abonar">Saldo a sumar o abonar</string>
    <string name="abonar_al_saldo_deudor">Abonar al saldo deudor</string>
    <string name="sumar_al_saldo_deudor">Sumar al saldo deudor</string>


    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="clave_de_registro">Clave de registro</string>
    <string name="registrar">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ingresa_los_apellidos">Ingresa los apellidos</string>
    <string name="ingresa_el_nombre">Ingresa el nombre</string>
    <string name="id">ID:</string>

    <string name="indique_las_observaciones">Indique las observaciones</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>

    <string name="actualizar_datos">Actualizar datos</string>
    <string name="consultar_informaci_n">Consultar información</string>
    <string name="abonos_o_incrementos">Abonos o incrementos</string>
    <string name="integrantes">Integrantes:</string>
    <string name="contreras_villanueva_angel">Contreras Villanueva Angel</string>
    <string name="vieyra_contreras_abel">Vieyra Contreras Abel</string>
    <string name="pulido_virrueta_antonio_de_jes_s">Pulido Virrueta Antonio de Jesús</string>
    <string name="morado_quiroz_salvador">Morado Quiroz Salvador</string>
    <string name="taller_de_base_de_datos">Taller de base de datos</string>
    <string name="polarindustries">PolarIndustries</string>
</resources>